fix navigate menu hover jumps

--- a/css/project_nav.css
+++ b/css/project_nav.css
@@ -79,7 +79,7 @@ td.navigation-list a[href$='donate.html'], td.navigation-list a[href$='donate.ht
 	background: linear-gradient(to bottom, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
 	color: white !important;
 	margin: 2px 3px 0px 2px !important;
-  padding: 4px 5px 4px 5px;
+  padding: 4px 3px 4px 4px;
 	text-decoration: none;
 }
 
